--- a/etl-example/writer/.env
+++ b/etl-example/writer/.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST=db       # Optional (used only if your app needs to connect to the container by hostname)
+POSTGRES_HOST=188.245.40.195  # Optional (used only if your app needs to connect to the container by hostname)
 POSTGRES_PORT=5432     # Optional (used only if your app needs to connect to the container by port)
 POSTGRES_DB=timedb     # The name of the database to create
 POSTGRES_USER=user     # The username for the database
