--- a/etl-example/writer/Dockerfile
+++ b/etl-example/writer/Dockerfile
@@ -1,10 +1,15 @@
 # Use a lightweight Python image
 FROM python:3.9-slim
 
-RUN apt update && apt install -y cron
-
 # Set the working directory
 WORKDIR /app
+
+# Update package manager and install required utilities
+RUN apt update && apt install -y \
+    cron \
+    iputils-ping \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements file and install dependencies
 COPY requirements.txt .
@@ -12,18 +17,22 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the Python script
 COPY writer.py .
+COPY .env /.env
 
-# Copy cron job configuration
-COPY cronjob /etc/cron.d/cronjob
-
-# Set permissions for the cron file
-RUN chmod 0644 /etc/cron.d/cronjob
-
-# Apply cron job
-RUN crontab /etc/cron.d/cronjob
+# Create a directory for logs
+RUN mkdir -p /logs
 
 # Ensure the log file exists and has the correct permissions
 RUN touch /logs/cron.log && chmod 0664 /logs/cron.log
+
+# Copy cron job configuration
+COPY cronjob /etc/cron.d/my-cron-job
+
+# Set permissions for the cron file
+RUN chmod 0644 /etc/cron.d/my-cron-job
+
+# Apply cron job
+RUN crontab /etc/cron.d/my-cron-job
 
 # Ensure cron runs in the foreground
 CMD ["cron", "-f"]
